Changed CSS and Bootstrap classes for index page to fix navbar display issues on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,6 +8,7 @@
 
 @media (max-width: 576px) {
     .nav-splitter {
-        padding: 0.5rem 2rem;
+        padding: 0 1.4rem;
+        font-size: 0.7rem;
     }
 }
